# AgentFlow

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/rag/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/rag/knowledge/: README.md
apps/rag/knowledge/evaluation/: golden_queries.json
apps/rag/knowledge/policies/contract/: contract-upgrade-policy.md  renewal-discount-policy.md  upgrade-faq.md
apps/rag/knowledge/policies/general/: agent-failure-handling-standard.md  approval-audit-standard.md  business-evidence-standard.md  customer-communication-standard.md  knowledge-retrieval-governance.md  policy-lifecycle-standard.md  policy-priority-guide.md  tool-execution-control-standard.md
apps/rag/knowledge/policies/invoice/: invoice-correction-faq.md  invoice-processing-policy.md
apps/rag/knowledge/policies/order/: cancellation-faq.md  order-cancellation-policy.md
apps/rag/migrations/: env.py
apps/rag/migrations/versions/: 20260716_0001_knowledge_documents.py
apps/rag/scripts/: validate_corpus.py
apps/rag/src/agentflow_rag/: __init__.py  admin.py  api.py  app.py  cleaning.py  config.py  database.py  documents.py  errors.py  evaluation.py  health.py  ingestion.py  logging.py  main.py  nodes.py  retrieval.py  runtime.py  schemas.py  stores.py
apps/rag/tests/: test_admin.py  test_api.py  test_cleaning.py  test_documents.py  test_errors.py  test_evaluation.py  test_health.py  test_ingestion.py  test_nodes.py  test_postgres_integration.py  test_retrieval.py
docs/: architecture.md  (+5 more)
(+99 files in other folders)
