[project]
name = "agentflow-rag"
version = "0.1.0"
description = "AgentFlow 企业政策 LlamaIndex RAG 服务"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jieba>=0.42,<1",
  "llama-index-core>=0.12,<1",
  "llama-index-embeddings-huggingface>=0.5,<1",
  "llama-index-postprocessor-sbert-rerank>=0.3,<1",
  "llama-index-retrievers-bm25>=0.5,<1",
  "llama-index-vector-stores-postgres>=0.4,<1",
  "pydantic-settings>=2.7,<3",
  "pymupdf>=1.25,<2",
  "psycopg2-binary>=2.9,<3",
  "python-multipart>=0.0.20,<1",
  "pyyaml>=6,<7",
  "sentence-transformers>=3.4,<6",
  "sqlalchemy[asyncio]>=2.0,<3",
  "torch>=2.6,<3",
  "uvicorn[standard]>=0.34,<1",
]

# 本地作品集默认使用 CPU 推理，避免容器误装体积巨大的 CUDA 运行库。
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
agentflow-rag = "agentflow_rag.main:run"
agentflow-rag-eval = "agentflow_rag.evaluation:run_cli"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow_rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
